--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -4,6 +4,7 @@ addons.jdgrowlnotification.menu = Growl Benachrichtigungen
 addons.jdlowspeed.statusmessage.disabled = Low Speederkennung ausschalten
 addons.jdlowspeed.statusmessage.enabled = Low Speederkennung einschalten
 addons.jdshutdown.menu = Nach dem Downloaden herunterfahren
+addons.jdshutdown.run = System jetzt herunterfahren
 addons.jdshutdown.statusmessage.disabled = Das System wird nach dem Download NICHT heruntergefahren.
 addons.jdshutdown.statusmessage.enabled = Das System wird nach dem Download heruntergefahren.
 addons.schedule.menu.add = Hinzufügen
@@ -19,6 +20,7 @@ addons.schedule.menu.redo = Zurückstellen in[Stunden]
 addons.schedule.menu.remain = Verbleibend:
 addons.schedule.menu.remove = Entfernen
 addons.schedule.menu.running = Angehalten!
+addons.schedule.menu.schedule = Zeitplaner
 addons.schedule.menu.start = Start
 addons.schedule.menu.start_stop = Start/Stop Download?
 addons.schedule.menu.stop = Stop
@@ -208,6 +210,7 @@ gui.config.jdrr.reconnectfaild = Reconnect fehlgeschlagen
 gui.config.jdrr.savereconnect = Der Reconnect war erfolgreich möchten sie jetzt speichern?
 gui.config.jdrr.title = Reconnect Recorder
 gui.config.jdshutdown.forceshutdown = Shutdown erzwingen (Nur einige OS)
+gui.config.jdshutdown.hibernate = Ruhezustand/Hibernate (Nur einige OS)
 gui.config.jdshutdown.standby = Standby (Nur einige OS)
 gui.config.liveheader.autoconfig = Router automatisch erkennen
 gui.config.liveheader.btnfindip = Router IP ermitteln
@@ -243,12 +246,9 @@ gui.config.plugin.host.btn_load = Lade Plugin
 gui.config.plugin.host.desc = ACHTUNG!!! Das JD Team übernimmt keine Verantwortung für die Einhaltung der AGB`s \r\n der Hoster. Bitte lesen Sie die AGB`s aufmerksam durch und aktivieren Sie das Plugin nur,\r\nfalls Sie sich mit diesen Einverstanden erklären!\r\nDie Reihenfolge der Plugins bestimmt die Prioritäten der automatischen Mirrorauswahl\n\rBevorzugte Hoster sollten oben stehen!
 gui.config.plugin.host.name = Host Plugins
 gui.config.plugin.host.readagb = AGB
-gui.config.plugin.optional.btn_togglestatus = An/Aus
 gui.config.plugin.optional.forcedactive = Das Addon %s kann nicht abgeschaltet werden.
 gui.config.plugin.optional.link_help = http://jdownloader.org/page.php?id=122
 gui.config.plugin.optional.linktext_help = Hilfe
-gui.config.plugin.optional.statusactive = An
-gui.config.plugin.optional.statusinactive = Aus
 gui.config.popup.title = Konfiguration
 gui.config.reconnect.name = Reconnect
 gui.config.reloadcontainer = Heruntergeladene Container einlesen
@@ -410,7 +410,6 @@ gui.logdialog.warning.uploadfailed = Upload fehlgeschlagen
 gui.logdialog.yourlog = Hochgeladener Log: Editieren möglich!
 gui.logger.askquestion = Bitte beschreib dein(e) Problem/Bug/Frage!
 gui.mainframe.title.updatemessage = -->UPDATES VERFÜGBAR:
-gui.menu.action = Aktion
 gui.menu.action.about.accel = CTRL+F1
 gui.menu.action.about.desc = Über JDownloader
 gui.menu.action.about.mnem = A
@@ -706,6 +705,7 @@ interaction.trigger.package_finished = Paket fertig
 interaction.trigger.package_finished.desc = Wird aufgerufen wenn ein Paket fertig geladen wurde
 interaction.trigger.single_download_failed = Download fehlgeschlagen
 interaction.trigger.single_download_failed.desc = Wird aufgerufen wenn ein Download wegen Fehlern abgebrochen wurde
+jd.plugins.decrypt.bestmovies.captchainputwrong = Falsche Eingabe, Zeit bitte wie folgt eingeben: 4:30
 jdownloader.org = jDownloader.org
 linkinformation.available.error = Fehler!
 linkinformation.download.aborted = Abgebrochen
@@ -786,6 +786,7 @@ plugins.errors.error = Fehler:
 plugins.errors.pluginerror = Plugin Fehler. Bitte Support informieren
 plugins.errors.uploadedto.premiumtrafficreached = Traffic Grenze erreicht
 plugins.errors.wrongpassword = Passwort falsch
+plugins.host.dosyakaydet.breakcaptcha = Auf OCR warten
 plugins.host.enterlinkpassword = Bitte Linkpasswort eingeben
 plugins.host.fastload.browsererror = Konnte den Link nicht im Browser öffnen!
 plugins.host.fastload.errors = Browser falsch konfiguriert
@@ -845,7 +846,6 @@ plugins.optional.hjsplit.menu.config = Einstellungen
 plugins.optional.hjsplit.menu.extract.singlefils = Archiv(e) zusammenführen
 plugins.optional.hjsplit.menu.toggle = Aktivieren
 plugins.optional.httpliveheaderscripter.action.end = Skripter verlassen
-plugins.optional.httpliveheaderscripter.action.start = Scriptersteller starten
 plugins.optional.httpliveheaderscripter.gui.desc = XML-File
 plugins.optional.httpliveheaderscripter.gui.importff.message = Fügen Sie hier den Firefox Liveheader Mitschnitt ein
 plugins.optional.httpliveheaderscripter.gui.importff.title = Firefox Liveheader Mitschnitt importieren
@@ -956,7 +956,6 @@ plugins.optional.langfileeditor.save.success.title = Speichern erfolgreich!
 plugins.optional.langfileeditor.saveas = Speichern Als
 plugins.optional.langfileeditor.search = Suchen
 plugins.optional.langfileeditor.searchfor = Suche nach String: (Startposition ist die erste ausgewählte Zeile)
-plugins.optional.langfileeditor.show_gui = LanguageEditor starten
 plugins.optional.langfileeditor.showdupes = Doppelte Einträge anzeigen
 plugins.optional.langfileeditor.sourcefile = Quelle (Datei):
 plugins.optional.langfileeditor.sourcefolder = Quelle (Ordner):
