--- a/trunk/ressourcen/jd/languages/Magyar.lng
+++ b/trunk/ressourcen/jd/languages/Magyar.lng
@@ -577,7 +577,7 @@ gui.table.contextmenu.newpackage = Mozgatás új csomagba
 gui.table.contextmenu.packagesort = Csomag fajta
 gui.table.contextmenu.packagesubmenu = Csomag
 gui.table.contextmenu.reset = Újraindítás
-gui.table.contextmenu.resume = Összefoglaló
+gui.table.contextmenu.resume = Folytat
 gui.table.draganddrop.after = Bedobás ez elött '%s'
 gui.table.draganddrop.before = Bedobás ez után '%s'
 gui.table.draganddrop.insertinpackageend = Csomag kezdeténél levő beillesztés '%s'
