--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -1,4 +1,3 @@
-﻿
 $translater$ = djuzi
 $version$ = $Revision$
 action.passwordlist.name = Lista haseł
@@ -25,13 +24,13 @@ addons.schedule.menu.redo = Resetuj co [godzin]
 addons.schedule.menu.remain = Pozostało:
 addons.schedule.menu.remove = Usuń
 addons.schedule.menu.running = Zatrzymane!
+addons.schedule.menu.schedule = Harmonogram
 addons.schedule.menu.settings = Ustawienia harmonogramu
 addons.schedule.menu.start = Rozpocznij
 addons.schedule.menu.start_stop = Rozpocznij/Zatrzymaj pobieranie
 addons.schedule.menu.stop = Zatrzymaj
 addons.schedule.menu.time = Wybierz czas: 
 addons.schedule.name = Harmonogram
-addons.schedule.menu.schedule = Harmonogram
 captcha.ces.banned = Zostałeś zbanowany. Zarejestruj się jeszcze raz.
 captcha.ces.infostring = C.E.S
 captcha.ces.message.body = <link href=\"http://jdownloader.org/jdccs.css\" rel=\"stylesheet\" type=\"text/css\" /><div><p>%s uwaga o %s<hr>%s</p></div>
@@ -60,7 +59,7 @@ controller.status.captchacode = Kod:
 controller.status.captchaerror = Błąd kodu Captcha
 controller.status.captchafailed = Nie można odczytać kodu
 controller.status.chunkloadfailed = Nie udało się pobrać części
-controller.status.connectionproblems = Polaczenie utracone
+controller.status.connectionproblems = Połączenie utracone
 controller.status.containererror = Błąd pojemnika
 controller.status.fileexists.overwritefailed = Błąd przy nadpisywaniu. Plik istnieje.
 controller.status.fileexists.skip = Plik już istnieje
@@ -107,7 +106,7 @@ download.error.message.rangeheaders = Serwer nie obsługuje dzielenia na częśc
 download.error.message.unavailable = Usługa tymczasowo niedostępna
 download.system.waitforconnection = Ob. %s/%s połączeń...oczekiwanie
 downloadlink.status.done = Koniec
-downloadlink.status.downloadinprogress = Laczenie
+downloadlink.status.downloadinprogress = Łączenie
 downloadlink.status.error.agb_not_signed = Regulamin nie zaakceptowany
 downloadlink.status.error.bot_detected = Wykryto BOTa
 downloadlink.status.error.captcha_image_error = Błąd obrazka z kodem Captcha.
@@ -269,7 +268,6 @@ gui.config.fengshui.fritzbox.title = Wykryto Fritz!Box
 gui.config.fengshui.fritzbox.upnp.checkbox = Komunikacja niedostępna
 gui.config.fengshui.fritzbox.upnpactive = Posiadasz Fritz!Box. Istnieje możliwość nawiązywania ponownego połączenia przez UPnP. Czy chcesz użyć tej funkcji?
 gui.config.fengshui.fritzbox.upnpinactive = Proszę aktywować UPnP w Fritz!Boxie <br><a href=\"http://%s\">do Fritz!Box</a><br><a href=\"http://wiki.jdownloader.org/index.php?title=Fritz!Box_Upnp\">Artykuł: Fritz!Box UPnP</a>
-gui.config.fengshui.title = Konfiguracja FengShui
 gui.config.fengshui.password = Hasło:
 gui.config.fengshui.rdautomatic = Automatyczne
 gui.config.fengshui.rdmanual = Ręczne
@@ -277,6 +275,7 @@ gui.config.fengshui.rdname = Wykrywanie routera
 gui.config.fengshui.routerip = IP Routera:
 gui.config.fengshui.routername = Nazwa:
 gui.config.fengshui.settings = Ustawienia
+gui.config.fengshui.title = Konfiguracja FengShui
 gui.config.fengshui.user = Użytkownik:
 gui.config.general.browser = Przeglądarka WWW
 gui.config.general.clipboardobserver = Obserwuj zawsze Schowek
@@ -436,7 +435,7 @@ gui.config.packagemanager.doautoupdate = Aktualizuj zaznaczone pakiety automatyc
 gui.config.packagemanager.doautoupdateafterdownloads = Zainstaluj pakiety po ich pobraniu
 gui.config.packagemanager.name = Menadżer Pakietów
 gui.config.packagemanager.reset = Resetuj informacje o wersji
-gui.config.packagemanager.supportJD = Wspomóż JD przez pobieranie wypasionych dodatków
+gui.config.packagemanager.supportjd = Wspomóż JD przez pobieranie wypasionych dodatków
 gui.config.packagemanager.supportjd.instanthelp = http://wiki.jdownloader.org/index.php?title=Addon-Manager
 gui.config.packagemanager.table.info = Informacje
 gui.config.plugin.abg_confirm = Przeczytałem regulamin %s i akceptuję go!
@@ -563,7 +562,7 @@ gui.dialog.about.member = Osoba
 gui.dialog.about.section = Dział
 gui.dialog.about.sourceurl = http://service.jdownloader.org/html/about_pl.html
 gui.dialog.about.title = O Programie JDownloader
-gui.dialog.about.whatisJD = Do czego służy JDownloader?
+gui.dialog.about.whatisjd = Do czego służy JDownloader?
 gui.dialogs.agb_tos.agbaccepted = Akceptuję Regulamin użytkowania
 gui.dialogs.agb_tos.description = Regulamin użytkowania serwisu %s nie zostały przeczytane i zaakceptowane.
 gui.dialogs.agb_tos.description2 = Nie został przeczytany i zaakceptowany.
@@ -577,7 +576,7 @@ gui.dialogs.helpdialog.btn.stoptimer = Zatrzymaj licznik
 gui.dialogs.helpdialog.defaulttitle = JDownloader - Pomoc 
 gui.dialogs.progress.title = Ładowanie...proszę czekać
 gui.download.bps = bajtów/sek,
-gui.download.create_connection = Laczenie...
+gui.download.create_connection = Łączenie...
 gui.download.desc = <font color='#00aa00' size='14'>Pomóż JDownloaderowi mówić lepiej w Twoim języku!</font><hr>Wyrażenie dla <b>%s</b> nie zostało przetłumaczone dla <b>%s</b>.<br/> Wprowadź tłumaczenie lub wciśnij <i>Anuluj</i><br/><div style='border: medium dotted #0000FF'><font color='#ff0000'>Żądanie tłumaczenia można wyłączyć w menu Ustawienia -> Interfejs</font></div><br>Przetłumacz podane wyrażenie: <b><u>%s</u></b>.Kliknij 'OK' gdy wszystko będzie się już zgadzać!
 gui.download.filesize_unknown = [nieznany rozmiar pliku]
 gui.download.kbps = KBajtów/sek.
@@ -597,6 +596,7 @@ gui.downloadlist.delete = Na pewno usunąć zaznaczone linki?
 gui.downloadlist.delete_downloadlinks = Usuwać ukończone elementy?
 gui.downloadlist.delete_packages = Usuwać ukończone pakiety?
 gui.downloadlist.reset = Zrestartować wybrane elementy?
+gui.downloadlist.tooltip.connection = Połączenie
 gui.downloadlist.tooltip.connections = Akt. połączenia:
 gui.downloadlist.tooltip.partnum = Części:
 gui.downloadlist.tooltip.partsactive = Aktywne:
@@ -1185,6 +1185,7 @@ interaction.webupdate.tostring = Uruchom aktializację
 jac.ces.login.pass = Hasło:
 jac.ces.login.title = CaptchaExchangeServer Login
 jac.ces.login.user = Nazwa użytkownika:
+jd.plugins.decrypt.bestmovies.captchainputwrong = Niepoprawny format. Czas powinien wyglądać tak: 4:30
 jdownloader.org = JDownloader.org
 linkinformation.available.error = Błąd!
 linkinformation.available.name = Dostępny
@@ -1729,7 +1730,7 @@ sys.ask.rlyclose = Czy na pewno chcesz zamknąć JDownloadera?
 sys.confirm.dorestart = Te ustawienia wymagają ponownego uruchomienia programu. Czy chcesz zrobić to teraz?
 sys.dlc.error_version = Szyfrowanie DLC nie powiodło się. Upewnij się, że używasz najnowszej wersji jD.
 sys.dlc.success = Szyfrowanie DLC powiodło się. Wypakować w celu sprawdzenia?
-sys.header.JDownloader= JDownloader
+sys.header.jdownloader = JDownloader
 sys.linklist.addnew.prepare = Przygotowywanie linku pobierania
 sys.message.welcome = Witamy w programie JDownloader! | Polska wersja: djuzi
 sys.warning.dlcerror = Uszkodzony DL-Container
