--- a/trunk/ressourcen/jd/languages/arabic.lng
+++ b/trunk/ressourcen/jd/languages/arabic.lng
@@ -358,7 +358,7 @@ gui.linkgrabber.packagetab.table.column.size = حجم
 gui.linkgrabber.packagetab.table.context.delete = حذف
 gui.linkgrabber.packagetab.table.context.newpackage = حزمة جديدة
 gui.linkgrabber.password = كملة المرور لفك الضغط:
-gui.linkgrabber.pos.bottom = الزر
+gui.linkgrabber.pos.bottom = الأسفل
 gui.linkgrabber.pos.top = الأعلى
 gui.linkgrabber.tabs.context.acceptselection = تأكيد الإختيار
 gui.linkgrabber.tabs.context.delete = حذف
