--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -1064,7 +1064,7 @@ plugins.trayicon.popup.menu.toggleclipboard = Zwischenablage an/aus
 plugins.trayicon.popup.menu.togglereconnect = Reconnect an/aus
 plugins.trayicon.popup.menu.update = JD aktualisieren
 plugins.trayicon.popup.title = JDownloader
-routerinfocollector.dialog.msg = <b>Um die automatische Routererkennung zu verbessern sammeln wir Routerinformationen!</b><br>Wenn sie damit einverstanden sind ihre Routerinformationen an unseren Server zu übermitteln bestätigen sie mit ja!
+routerinfocollector.dialog.msg = <b>Um die automatische Routererkennung zu verbessern sammeln wir Routerinformationen!</b><br>Wenn sie damit einverstanden sind die Informationen aus den Details an unseren Server zu übermitteln bestätigen sie mit ja!
 routerinfocollector.dialog.title = Helfen sie die Routererkennung zu verbessern
 showcaptcha.choose.file = Wählen sie eine Bilddatei aus
 showcaptcha.chooser.title = jDownloader :: Zeige Captcha
